--- a/src/components/common/text/blogPost/BlogPost.module.css
+++ b/src/components/common/text/blogPost/BlogPost.module.css
@@ -31,7 +31,19 @@
   line-clamp: 2;
 }
 
+@media screen and (max-width: 1150px) {}
+
+@media screen and (max-width: 900px) {
+  .container {
+    padding: 32px 24px;
+  }
+}
+
 @media screen and (max-width: 650px) {
+  .container {
+    padding: 16px;
+  }
+
   .text {
     -webkit-line-clamp: 3;
     line-clamp: 3;
