--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -149,6 +149,7 @@ hr {
   gap: 2px;
 }
 
+.testimonial-person,
 .testimonial {
   width: 100%;
   height: 100%;
@@ -238,6 +239,10 @@ hr {
     padding: 80px 0 40px;
   }
 
+  .testimonial {
+    padding: 20px;
+  }
+
   .text-container,
   .text-container-lg,
   .text-container-xl {
@@ -270,6 +275,14 @@ hr {
   .section-layout .grid-cols {
     display: flex;
     flex-wrap: wrap;
+  }
+
+  .testimonial-person {
+    padding: 24px;
+  }
+
+  .testimonial {
+    padding: 12px;
   }
 
   .cursor-icon {
@@ -323,5 +336,9 @@ hr {
 
   .img-round {
     max-width: 54px;
+  }
+
+  .testimonial-person {
+    padding: 16px;
   }
 }
